# switchbrew_bevy

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
docs/: NO_STD_ANALYSIS.md
examples/: crab_crossing.rs  minimal_ecs.rs
src/: input.rs  lib.rs  platform.rs  window.rs
